--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,9 +10,25 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/stack": "^5.12.6",
+    "apisauce": "^2.0.0",
+    "axios": "^0.21.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
-    "react-native-onesignal": "^3.9.2"
+    "react-native-elements": "^3.0.0-alpha.1",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-multiple-select": "^0.5.6",
+    "react-native-onesignal": "^3.9.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.14.0",
+    "react-native-vector-icons": "^7.1.0",
+    "react-navigation": "^4.4.3",
+    "react-navigation-stack": "^2.10.1",
+    "react-navigation-tabs": "^2.10.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
