--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,8 +19,10 @@
     "react-native": "0.63.3",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-multiple-select": "^0.5.6",
     "react-native-onesignal": "^3.9.2",
+    "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.14.0",
     "react-native-vector-icons": "^7.1.0",
@@ -28,7 +30,13 @@
     "react-navigation-stack": "^2.10.1",
     "react-navigation-tabs": "^2.10.1",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5"
+    "reactotron-react-native": "^5.0.0",
+    "reactotron-redux": "^3.1.3",
+    "reactotron-redux-saga": "^4.2.3",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
