--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.12.6",
     "apisauce": "^2.0.0",
     "axios": "^0.21.0",
+    "immer": "^8.0.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-elements": "^3.0.0-alpha.1",
