--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.2.1",
+    "knex": "^0.21.12",
     "mongoose": "^5.1.2",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
