Ajustando Atualização de Grupos

--- a/mobile2/package.json
+++ b/mobile2/package.json
@@ -14,9 +14,11 @@
     "@react-native-community/masked-view": "^0.1.10",
     "add": "^2.0.6",
     "axios": "^0.21.0",
+    "date-fns": "^2.16.1",
     "history": "^5.0.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-checkbox": "^2.0.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-onesignal": "^3.9.2",
